hphp/hack/test/typecheck/expression_trees/nested_splicing.php.exp
File "nested_splicing.php", line 21, characters 19-28:
This is a reserved keyword for expression trees that cannot be used (Parsing[1002])
